<resources>
    <string name="app_name">BulkTracker</string>
    <string name="add_weight">Add new measurement</string>
    <string name="quick_add">Quick add</string>
    <string name="add_details">Add details</string>
    <string name="view_history">View history</string>
    <string name="view_graph">View graph</string>
    <string name="weight_added">Weight added</string>
    <string name="reminder_notification_title">Log your weight</string>
    <string name="reminder_notification_text">You haven\'t entered a weight yet today. Get on the scale you bum.</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_weight_entry">Enter a new weight</string>
    <string name="enter_weight">Enter weight</string>
    <string name="set_time_of_weight">Set time for this weight</string>
    <string name="lbs">lbs</string>
    <string name="kgs">kgs</string>
    <string name="weight_hint">Type weight here</string>
    <string name="enter">Enter</string>
    <string name="add_comment">Add comment</string>
    <string name="comment_hint">Type any comments here</string>
    <string name="date_selected">Date:</string>
    <string name="pick_date">Change date</string>
    <string name="pick_time">Change time</string>
    <string name="progress_picture">Progress picture</string>
    <string name="take_picture">Take picture</string>
    <string name="take_new_picture">Take new picture</string>
    <string name="take_another_picture">Take another picture</string>

    <string name="title_activity_weight_history">Weight history</string>
    <string name="delete">delete</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="confirm_delete_msg">Are you sure you want to delete</string>

    <string name="title_activity_graph_view">Weight history chart</string>
    <string name="raw_data">Raw data</string>
    <string name="smoothed_data">Smoothed data</string>
    <string name="last_week_regression">Weight change per day for the last week:</string>
    <string name="last_month_regression">Weight change per day for the last month:</string>

    <string name="title_activity_picture_gallery">Picture Gallery</string>
    <string name="progress_pictures">Progress pictures</string>
    <string name="title_activity_picture_pager">PicturePagerActivity</string>
    <string name="date">Date</string>
    <string name="weight">Weight</string>
    <string name="time">Time</string>
    <string name="edit">Edit</string>
    <string name="comment">Comment</string>
    <string name="history">History</string>
    <string name="weight_entry">Weight entry</string>
    <string name="delete_photo">Delete photo</string>
    <string name="photo_deleted">Photo deleted</string>

    <string name="pref_reminders">Reminders?</string>
    <string name="pref_reminders_summ">Enable daily reminders to enter your weight.</string>
    <string name="pref_unit">Units</string>
    <string-array name="pref_unit_entries">
        <item>@string/lbs</item>
        <item>@string/kgs</item>
    </string-array>
    <string name="english">English</string>
    <string name="pref_language">Language</string>
    <string-array name="pref_language_entries">
        <item>@string/english</item>
    </string-array>



</resources>
