<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mattleibold.bulktracker.WeightHistoryActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_weight_entry" android:title="@string/weight_entry"
        android:orderInCategory="101" app:showAsAction="never" />
    <item android:id="@+id/action_graph" android:title="@string/view_graph"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_pictures" android:title="@string/progress_pictures"
        android:orderInCategory="103" app:showAsAction="never" />
</menu>
