<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView android:text="@string/app_name" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:gravity="center"
        android:textSize="40sp"/>

    <EditText android:inputType="numberDecimal" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:hint="@string/weight_hint"
        android:id="@+id/weightValue" />

    <Button android:text="@string/add_weight" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:onClick="logWeight"/>

    <Button android:text="@string/view_history" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:onClick="showWeightHistoryActivity"/>

    <Button android:text="@string/view_graph" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:onClick="showGraphViewActivity" />

</LinearLayout>
