<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.mattleibold.bulktracker.WeightEntryActivity">

    <TextView android:text="@string/enter_weight" android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent"
        android:orientation="horizontal">

        <EditText android:inputType="numberDecimal" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:hint="@string/weight_hint"
            android:id="@+id/weightValue" />
        <TextView android:text="@string/lbs" android:layout_width="wrap_content"
            android:layout_height="match_parent" android:gravity="center_vertical"/>

    </LinearLayout>

    <Button android:text="@string/enter" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:onClick="logWeight" />


</LinearLayout>
