<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mattleibold.bulktracker.ProgressPictureFragment">

    <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
        android:id="@+id/progressPicture" android:contentDescription="@string/progress_picture"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        android:background="@color/translucentblack">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/dateText" android:text="@string/date"
            android:gravity="center_horizontal" android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/weightText" android:text="@string/weight"
            android:gravity="center_horizontal" android:textSize="25sp"
            android:textColor="@color/white"/>

    </LinearLayout>
</FrameLayout>
